The option "Front Faces Only" doesn't work in Clay and ClayStrips brushes. #44553

Closed
opened 2015-04-29 20:25:48 +02:00 by Michael Kret · 20 comments

System Information
Windows 8.1
2047MB NVIDIA GeForce GT 740M (Acer Incorporated [ALI])

Blender Version
Broken: 2.74-f8540d7-win64
Worked: 2.73

Short description of error
Option "Front Faces Only" doesn't work in Clay and ClayStrips brushes.

Exact steps for others to reproduce the error
Turn-on option "Front Faces Only" in Clay or ClayStrips and sculpt on thin mesh, on the other side of the mesh appears artifacts.
Here's some video that show the problem:
https://www.youtube.com/watch?v=1jPUURe1blc

**System Information** Windows 8.1 2047MB NVIDIA GeForce GT 740M (Acer Incorporated [ALI]) **Blender Version** Broken: 2.74-f8540d7-win64 Worked: 2.73 **Short description of error** Option "Front Faces Only" doesn't work in Clay and ClayStrips brushes. **Exact steps for others to reproduce the error** Turn-on option "Front Faces Only" in Clay or ClayStrips and sculpt on thin mesh, on the other side of the mesh appears artifacts. Here's some video that show the problem: https://www.youtube.com/watch?v=1jPUURe1blc
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @atekron

Added subscriber: @atekron
Campbell Barton self-assigned this 2015-04-30 11:08:05 +02:00

Note, the video is set to private. Please upload a blend file.

Note, the video is set to private. Please upload a blend file.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

the video is no longer private is a .blend still needed?

the video is no longer private is a .blend still needed?

Added subscriber: @sindra1961

Added subscriber: @sindra1961

This may be caused by Dyntopo.
I attach a file.
sculpt.blend
You open the file, and change Dyntopo effectively.
You may recognize that face which you cannot see if you operate it with the brush that you were pointed out around ten times is reconstituted.
If you enter the Edit mode, you know it clearly.
The version that I tried it.
version 2.74 (sub 5), branch b'master', commit date b'2015-05-05' b'20:34', hash b'c246e0c', b'Release'
sculpt.png
sculpt2.png

This may be caused by Dyntopo. I attach a file. [sculpt.blend](https://archive.blender.org/developer/F170973/sculpt.blend) You open the file, and change Dyntopo effectively. You may recognize that face which you cannot see if you operate it with the brush that you were pointed out around ten times is reconstituted. If you enter the Edit mode, you know it clearly. The version that I tried it. version 2.74 (sub 5), branch b'master', commit date b'2015-05-05' b'20:34', hash b'c246e0c', b'Release' ![sculpt.png](https://archive.blender.org/developer/F170976/sculpt.png) ![sculpt2.png](https://archive.blender.org/developer/F170978/sculpt2.png)

Probably I think that it occurs other than the reported brush.

Probably I think that it occurs other than the reported brush.
Author

This bug occurs only with clay and clay strip brushes, other brushes not affected.

This bug occurs only with clay and clay strip brushes, other brushes not affected.

Blob brush
screen.png

opposite side
The face of the non-visible side is reconstituted.
screen2.png

Blob brush ![screen.png](https://archive.blender.org/developer/F171029/screen.png) opposite side The face of the non-visible side is reconstituted. ![screen2.png](https://archive.blender.org/developer/F171031/screen2.png)

There is the place that is displayed so that edge sometimes separates when I drag a brush.
Crease-add.png
An invisible part is displayed obviously.
Crease-add2.png
There does not separate when I display it with edit mode.
Crease-add-edit.png
face is reconstituted when I confirm the other side there.
Crease-add_other-side.png

There is the place that is displayed so that edge sometimes separates when I drag a brush. ![Crease-add.png](https://archive.blender.org/developer/F171038/Crease-add.png) An invisible part is displayed obviously. ![Crease-add2.png](https://archive.blender.org/developer/F171040/Crease-add2.png) There does not separate when I display it with edit mode. ![Crease-add-edit.png](https://archive.blender.org/developer/F171042/Crease-add-edit.png) face is reconstituted when I confirm the other side there. ![Crease-add_other-side.png](https://archive.blender.org/developer/F171044/Crease-add_other-side.png)
Campbell Barton was unassigned by Bastien Montagne 2015-05-15 17:48:36 +02:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-05-15 17:48:36 +02:00

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

Antony, maybe you can make sense out of this?

Antony, maybe you can make sense out of this?
Antonis Ryakiotakis was unassigned by Campbell Barton 2015-05-18 09:11:15 +02:00
Campbell Barton self-assigned this 2015-05-18 09:11:15 +02:00

Looking into a fix.

Looking into a fix.

This issue was referenced by 5dfe88adba

This issue was referenced by 5dfe88adbaeec63ede5c76dd84457e240f2fb602

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I think that it still occurs.

{F177282}{F177284}{F177286}Cray.blend
version 2.74 (sub 5), branch b'master', commit date b'2015-05-18' b'20:10', hash b'65328fa', b'Release'

I think that it still occurs. {[F177282](https://archive.blender.org/developer/F177282/screen.png)}{[F177284](https://archive.blender.org/developer/F177284/screen2.png)}{[F177286](https://archive.blender.org/developer/F177286/screen3.png)}[Cray.blend](https://archive.blender.org/developer/F177288/Cray.blend) version 2.74 (sub 5), branch b'master', commit date b'2015-05-18' b'20:10', hash b'65328fa', b'Release'

This is caused by passing NULL to brush_tex sampling, that's where front face is calculated. I seem to remember it was removed to get rid of artifacts but I don't think it's the correct thing to do (and I doubt it was the cause of artifacts without front-face either)

This is caused by passing NULL to brush_tex sampling, that's where front face is calculated. I seem to remember it was removed to get rid of artifacts but I don't think it's the correct thing to do (and I doubt it was the cause of artifacts without front-face either)

This issue was referenced by dc3533030a

This issue was referenced by dc3533030abe2f188316fee993b274d7f83df288

@Psy-Fi:
Thank you.
I think that a problem was improved.

version 2.74 (sub 5), branch b'master', commit date b'2015-05-19' b'21:13', hash b'a1e8547', b'Release'

@Psy-Fi: Thank you. I think that a problem was improved. version 2.74 (sub 5), branch b'master', commit date b'2015-05-19' b'21:13', hash b'a1e8547', b'Release'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44553
No description provided.