Fix T44553: Dyntopo ignores front-face option

When 'Front Faces' brush option was enabled, dyntop would still adjust detail on back-faces.